Added helper text

--- a/ui_text.yml
+++ b/ui_text.yml
@@ -45,3 +45,7 @@ joiner:
 joiner_options:
   English: Select Joiner
   संस्कृतम्: योजकशब्दं चिनोतु
+
+helper:
+  English: For options, see the left sidebar. If it is hidden, click on the top left icon.
+  संस्कृतम्: विकल्पानां कृते वामपार्श्वपट्टिकां पश्यतु । गुप्तास्ति चेदुपरि वामकोणे स्थितचिह्नं नुदतु ।
