--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,2 @@
-akshara==1.1.1
-aksharamukha==2.1.2
-altair==5.4.1
-annotated-types==0.7.0
-anyio==4.6.2.post1
-attrs==24.2.0
-blinker==1.9.0
-build==1.2.2.post1
-cachetools==5.5.0
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-click==8.1.7
-clipboard==0.0.4
-cryptography==43.0.3
-Deprecated==1.2.15
-docutils==0.21.2
-fastapi==0.115.5
-fonttools==4.55.0
-gitdb==4.0.11
-GitPython==3.1.43
-h11==0.14.0
-idna==3.10
-importlib-metadata==6.11.0
-jaconv==0.4.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-jeepney==0.8.0
-Jinja2==3.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-keyring==25.5.0
-langcodes==3.5.0
-language_data==1.3.0
-lxml==5.3.0
-marisa-trie==1.2.1
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-more-itertools==10.5.0
-narwhals==1.14.1
-nh3==0.2.18
-numpy==1.26.4
-packaging==23.2
-pandas==2.2.3
-pillow==10.4.0
-pkginfo==1.10.0
-protobuf==4.25.5
-pyarrow==18.0.0
-pycparser==2.22
-pydantic==2.10.1
-pydantic_core==2.27.1
-pydeck==0.9.1
-Pygments==2.18.0
-pykakasi==2.3.0
-pyperclip==1.9.0
-pyproject_hooks==1.2.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pytz==2024.2
-PyYAML==6.0.2
-readme_renderer==44.0
-referencing==0.35.1
-regex==2024.11.6
-requests==2.32.3
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
-rich==13.9.4
-rpds-py==0.21.0
-sankhyaakaara==0.1.0
-SecretStorage==3.3.3
-setuptools==75.6.0
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-starlette==0.41.3
-streamlit==1.28.2
-tenacity==8.5.0
-toml==0.10.2
-tornado==6.4.2
-twine==5.1.1
-typing_extensions==4.12.2
-tzdata==2024.2
-tzlocal==5.2
-unicodedata2==15.1.0
-urllib3==2.2.3
-uvicorn==0.32.1
-validators==0.34.0
-watchdog==6.0.0
-wrapt==1.16.0
-zipp==3.21.0
+akshara
+aksharamukha
