--- a/ui_text.yml
+++ b/ui_text.yml
@@ -81,3 +81,7 @@ copy:
 copied:
   English: Copied!
   Samskritam: प्रतिलिपिः अंशफलके स्थापितम्
+
+about:
+  English: More about the tool
+  Samskritam: उपकरणस्य विषये इतोऽप्यधिकम्
